# ella

./: .gitattributes  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: windows-ci.yml
docs/: beta-operations-runbook.md  beta-release-checklist.md  beta-release-notes-template.md  beta-release-pipeline.md  beta-tester-onboarding.md  developer-setup-windows.md  memory-browser-plan.md
packaging/: ella-beta.iss  ella_app_icon.rc.in  qt.conf
scripts/: beta_release.ps1  beta_smoke_matrix.ps1  build_with_recovery.ps1  setup_dev_windows.ps1  setup_tesseract.ps1
src/: main.cpp
src/core/: AppConfig.cpp  AppConfig.h  SecureStorage.cpp  SecureStorage.h  Types.h
src/database/: DatabaseManager.cpp  DatabaseManager.h
src/models/: FileListModel.cpp  FileListModel.h
src/notes/: NoteManager.cpp  NoteManager.h  RichTextFormatter.cpp  RichTextFormatter.h
src/search/: ContentExtractor.cpp  ContentExtractor.h  IndexingService.cpp  IndexingService.h
src/sync/: CloudProvider.cpp  CloudProvider.h  CloudSyncService.cpp  CloudSyncService.h  OAuthCallbackServer.cpp  OAuthCallbackServer.h
src/ui/: BrowserPage.qml  EllaButton.qml  EllaChip.qml  EllaModalOverlay.qml  EllaPanel.qml  EllaTextField.qml  EllaTokens.qml  HomePage.qml  Main.qml  MediaPreviewPanel.qml  ReaderPage.qml
src/ui/assets/: ASSET_MANIFEST.md
tests/: MemoryBrowserTests.cpp
